--- a/index.html
+++ b/index.html
@@ -78,7 +78,33 @@
 
 
         </section>
+        <!-- gradient-section -->
+
+        <section class="adviced-section">
+            <div class="advice">
+             <h3 class="advice-title">Awlays keep a positive mindset</h3>
+             <button class="btn-simple">call now</button>
+
+            </div>
+        </section>
     </main>
+    <!-- footer-section -->
+    <footer class="footer">
+        <div class="footer-container">
+            <h4 class="footer-title">Future</h4>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p><br><br>
+            <p>Email: assignment1@gmail.com</p><br><br>
+            <p>Phone: 0102135132</p>
+        </div>
+        <div class="form-container">
+            <div>
+                <h4>Subscribe</h4><br><br>
+                <input type="Email" placeholder="Enter Your Email"><br>
+                <button class="btn-simple">subscribe</button>
+            </div>
+        </div>
+
+    </footer>
 
 </body>
 </html>
