--- a/index.html
+++ b/index.html
@@ -94,7 +94,20 @@
             <h4 class="footer-title">Future</h4>
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p><br><br>
             <p>Email: assignment1@gmail.com</p><br><br>
-            <p>Phone: 0102135132</p>
+            <p>Phone: 0102135132</p><br><br>
+            <a href="">
+                <img src="images/icons/fb.png" alt="">
+            </a>
+            <a href="">
+                <img src="images/icons/twitter.png" alt="">
+            </a>
+            <a href="">
+                <img src="images/icons/youtube.png" alt="">
+            </a>
+
+            
+
+            
         </div>
         <div class="form-container">
             <div>
